1.用户意图推测框长度调整 2.打开蓝牙调整 3.移除退出按钮，添加状态切换按钮，按钮取消滑动式改成一排

--- a/SmartGeometry/res/layout/main.xml
+++ b/SmartGeometry/res/layout/main.xml
@@ -62,14 +62,14 @@
 				<RadioButton
 					style="@style/radioButton"
 					
-					android:drawableTop="@drawable/bluetooth"
-					android:id="@+id/bluetooth"
+					android:drawableTop="@drawable/pen"
+					android:id="@+id/pen"
 				/>
 				<RadioButton
 					style="@style/radioButton"
 					
-					android:drawableTop="@drawable/exit"
-					android:id="@+id/exit"
+					android:drawableTop="@drawable/bluetooth"
+					android:id="@+id/bluetooth"
 				/>
 			</RadioGroup>
 	</HorizontalScrollView>
